# whatsapp-mcp

./: .npmignore  LICENSE  README.md  index.js  package.json
lib/: utils.js
scripts/: postinstall.js
whatsapp-mcp-server/: pyproject.toml
