[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for WhatsApp integration with Claude and other AI assistants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]
